nugdev-compiler-2025/src/04_parsing/Parser.cpp
#include "Parser.hpp"
#include "04_parsing/ast/program/ImportExport.hpp"
#include <sstream>

namespace nugdev::compiler::parsing {

// Static EOF token to avoid repeated creation
static const tokenize::Token s_eof_token(tokenize::TokenType::EOF_TOKEN, "");

Parser::Parser(std::vector<tokenize::Token> tokens)
    : m_tokens(std::move(tokens)), m_current_position(0) {}

std::unique_ptr<ast::Program> Parser::parse() { return parse_program(); }

// ==================== Token Management ====================

bool Parser::is_at_end() const {
  return m_current_position >= m_tokens.size() ||
         current().get_type() == tokenize::TokenType::EOF_TOKEN;
}

const tokenize::Token &Parser::current() const {
  if (m_current_position >= m_tokens.size()) {
    return s_eof_token;
  }
  return m_tokens[m_current_position];
}

const tokenize::Token &Parser::peek(size_t offset) const {
  size_t pos = m_current_position + offset;
  if (pos >= m_tokens.size()) {
    return s_eof_token;
  }
  return m_tokens[pos];
}

const tokenize::Token &Parser::advance() {
  if (!is_at_end()) {
    m_current_position++;
  }
  return current();
}

const tokenize::Token &Parser::previous() const {
  if (m_current_position == 0) {
    return s_eof_token;
  }
  return m_tokens[m_current_position - 1];
}

bool Parser::check(tokenize::TokenType type) const {
  return current().get_type() == type;
}

bool Parser::match(tokenize::TokenType type) {
  if (check(type)) {
    advance();
    return true;
  }
  return false;
}

bool Parser::match(const std::vector<tokenize::TokenType> &types) {
  for (const auto &type : types) {
    if (check(type)) {
      advance();
      return true;
    }
  }
  return false;
}

const tokenize::Token &Parser::consume(tokenize::TokenType type,
                                       const std::string &message) {
  if (check(type)) {
    return advance();
  }
  error(message);
  return s_eof_token; // Return consistent EOF token on error
}

void Parser::error(const std::string &message) const {
  std::ostringstream oss;
  oss << "Parse error at token '" << current().get_literal().to_string()
      << "': " << message;
  throw ParseException(oss.str());
}

void Parser::synchronize() {
  advance();

  while (!is_at_end()) {
    if (previous().get_type() == tokenize::TokenType::Semicolon)
      return;

    switch (current().get_type()) {
    case tokenize::TokenType::Function:
    case tokenize::TokenType::Let:
    case tokenize::TokenType::Mut:
    case tokenize::TokenType::If:
    case tokenize::TokenType::For:
    case tokenize::TokenType::Return:
    case tokenize::TokenType::Struct:
    case tokenize::TokenType::Interface:
      return;
    default:
      break;
    }
    advance();
  }
}

// ==================== Program Structure ====================

std::unique_ptr<ast::Program> Parser::parse_program() {
  auto program = ast::ASTFactory::create_program();

  while (!is_at_end()) {
    auto module = parse_module();
    if (module) {
      program->add_module(std::move(module));
    }
  }

  return program;
}

std::unique_ptr<ast::Module> Parser::parse_module() {
  auto module = ast::ASTFactory::create_module();

  while (!is_at_end()) {
    try {
      if (check(tokenize::TokenType::Import)) {
        auto import_stmt = parse_import_statement();
        // Note: ImportStatement handling would be implemented when Module
        // supports it
      } else if (check(tokenize::TokenType::Export)) {
        auto export_stmt = parse_export_statement();
        // Note: ExportStatement handling would be implemented when Module
        // supports it
      } else {
        auto statement = parse_statement();
        if (statement) {
          module->add_statement(std::move(statement));
        }
      }
    } catch (const ParseException &) {
      synchronize();
      throw;
    }
  }

  return module;
}

// ==================== Statements ====================

std::unique_ptr<ast::Statement> Parser::parse_statement() {
  if (check(tokenize::TokenType::Let) || check(tokenize::TokenType::Mut)) {
    return parse_variable_declaration();
  }

  if (check(tokenize::TokenType::Function)) {
    // Look ahead to distinguish function declaration from function expression
    size_t saved_pos = m_current_position;
    advance(); // consume 'fun'

    bool is_declaration = false;
    if (check(tokenize::TokenType::Identifier)) {
      is_declaration = true;
    }

    // Restore position
    m_current_position = saved_pos;

    if (is_declaration) {
      return parse_function_declaration();
    } else {
      // It's a function expression, parse as expression statement
      return parse_expression_statement();
    }
  }

  if (check(tokenize::TokenType::Struct)) {
    return parse_struct_declaration();
  }

  if (check(tokenize::TokenType::Interface)) {
    return parse_interface_declaration();
  }

  if (check(tokenize::TokenType::If)) {
    return parse_if_statement();
  }

  if (check(tokenize::TokenType::For)) {
    return parse_for_statement();
  }

  if (check(tokenize::TokenType::Break)) {
    return parse_break_statement();
  }

  if (check(tokenize::TokenType::Continue)) {
    return parse_continue_statement();
  }

  if (check(tokenize::TokenType::Return)) {
    return parse_return_statement();
  }

  // Expression statement
  return parse_expression_statement();
}

std::unique_ptr<ast::VariableDeclaration> Parser::parse_variable_declaration() {
  return parse_variable_declaration(true); // consume semicolon by default
}

// Overloaded version that allows controlling semicolon consumption
std::unique_ptr<ast::VariableDeclaration>
Parser::parse_variable_declaration(bool consume_semicolon) {
  // Parse mutability: mut takes precedence over let
  ast::VariableDeclaration::Mutability mutability;
  if (match(tokenize::TokenType::Mut)) {
    mutability = ast::VariableDeclaration::Mutability::MUT;
  } else if (match(tokenize::TokenType::Let)) {
    mutability = ast::VariableDeclaration::Mutability::LET;
  } else {
    error("Expected 'let' or 'mut' for variable declaration");
    mutability = ast::VariableDeclaration::Mutability::LET; // fallback
  }

  std::string name = parse_identifier();

  std::unique_ptr<ast::TypeLiteral> type = nullptr;
  std::unique_ptr<ast::Expression> initializer = nullptr;

  // Optional type annotation
  if (match(tokenize::TokenType::Colon)) {
    type = parse_type_literal();
  }

  // Optional initializer
  if (match(tokenize::TokenType::Assign)) {
    initializer = parse_expression();
  }

  // Must have either type or initializer
  if (!type && !initializer) {
    error(
        "Variable declaration must have either type annotation or initializer");
  }

  if (consume_semicolon) {
    match(tokenize::TokenType::Semicolon); // Optional semicolon
  }

  return ast::ASTFactory::create_variable_declaration(
      mutability, name, std::move(type), std::move(initializer));
}

std::unique_ptr<ast::FunctionDeclaration> Parser::parse_function_declaration() {
  consume(tokenize::TokenType::Function, "Expected 'fun'");

  std::string name = parse_identifier();

  consume(tokenize::TokenType::LeftParen, "Expected '(' after function name");
  auto parameters = parse_parameter_list();
  consume(tokenize::TokenType::RightParen, "Expected ')' after parameters");

  consume(tokenize::TokenType::Colon, "Expected ':' after function parameters");
  auto return_type = parse_type_literal();

  auto function = ast::ASTFactory::create_function_declaration(
      name, std::move(parameters), std::move(return_type));

  // Parse function body
  if (match(tokenize::TokenType::Assign)) {
    // Single expression body
    auto body_expr = parse_expression();
    function->set_expression_body(std::move(body_expr));
  } else {
    // Block body
    auto block = ast::ASTFactory::create_block_expression();
    consume(tokenize::TokenType::LeftBrace,
            "Expected '{' or '=' for function body");

    while (!check(tokenize::TokenType::RightBrace) && !is_at_end()) {
      auto stmt = parse_statement();
      block->add_statement(std::move(stmt));
    }

    consume(tokenize::TokenType::RightBrace,
            "Expected '}' after function body");
    function->set_block_body(std::move(block));
  }

  return function;
}

std::unique_ptr<ast::ExpressionStatement> Parser::parse_expression_statement() {
  auto expr = parse_expression();
  match(tokenize::TokenType::Semicolon); // Optional semicolon
  return ast::ASTFactory::create_expression_statement(std::move(expr));
}

// ==================== Expressions ====================

std::unique_ptr<ast::Expression> Parser::parse_expression() {
  return parse_assignment_expression();
}

std::unique_ptr<ast::Expression> Parser::parse_assignment_expression() {
  auto expr = parse_ternary_expression();

  if (is_assignment_operator(current().get_type())) {
    auto op = token_to_assignment_operator(current().get_type());
    advance();
    auto right = parse_assignment_expression();

    return std::make_unique<ast::AssignmentExpression>(op, std::move(expr),
                                                       std::move(right));
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_ternary_expression() {
  auto expr = parse_null_coalescing_expression();

  if (match(tokenize::TokenType::Question)) {
    auto then_expr = parse_expression();
    consume(tokenize::TokenType::Colon, "Expected ':' in ternary expression");
    auto else_expr = parse_expression();

    return std::make_unique<ast::TernaryExpression>(
        std::move(expr), std::move(then_expr), std::move(else_expr));
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_null_coalescing_expression() {
  auto expr = parse_logical_or_expression();

  while (match(tokenize::TokenType::NullCoalescing)) {
    auto right = parse_logical_or_expression();
    expr = ast::ASTFactory::create_binary_expression(
        ast::BinaryExpression::Operator::NULL_COALESCING, std::move(expr),
        std::move(right));
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_logical_or_expression() {
  auto expr = parse_logical_and_expression();

  while (match(tokenize::TokenType::LogicalOr)) {
    auto right = parse_logical_and_expression();
    expr = ast::ASTFactory::create_binary_expression(
        ast::BinaryExpression::Operator::LOGICAL_OR, std::move(expr),
        std::move(right));
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_logical_and_expression() {
  auto expr = parse_bitwise_or_expression();

  while (match(tokenize::TokenType::LogicalAnd)) {
    auto right = parse_bitwise_or_expression();
    expr = ast::ASTFactory::create_binary_expression(
        ast::BinaryExpression::Operator::LOGICAL_AND, std::move(expr),
        std::move(right));
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_bitwise_or_expression() {
  auto expr = parse_bitwise_xor_expression();

  while (match(tokenize::TokenType::Pipe)) {
    auto right = parse_bitwise_xor_expression();
    expr = ast::ASTFactory::create_binary_expression(
        ast::BinaryExpression::Operator::BITWISE_OR, std::move(expr),
        std::move(right));
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_bitwise_xor_expression() {
  auto expr = parse_bitwise_and_expression();

  while (match(tokenize::TokenType::Caret)) {
    auto right = parse_bitwise_and_expression();
    expr = ast::ASTFactory::create_binary_expression(
        ast::BinaryExpression::Operator::BITWISE_XOR, std::move(expr),
        std::move(right));
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_bitwise_and_expression() {
  auto expr = parse_equality_expression();

  while (match(tokenize::TokenType::Ampersand)) {
    auto right = parse_equality_expression();
    expr = ast::ASTFactory::create_binary_expression(
        ast::BinaryExpression::Operator::BITWISE_AND, std::move(expr),
        std::move(right));
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_equality_expression() {
  auto expr = parse_relational_expression();

  while (match({tokenize::TokenType::Equal, tokenize::TokenType::NotEqual})) {
    auto op = (previous().get_type() == tokenize::TokenType::Equal)
                  ? ast::BinaryExpression::Operator::EQUAL
                  : ast::BinaryExpression::Operator::NOT_EQUAL;
    auto right = parse_relational_expression();
    expr = ast::ASTFactory::create_binary_expression(op, std::move(expr),
                                                     std::move(right));
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_relational_expression() {
  auto expr = parse_type_check_expression();

  while (match({tokenize::TokenType::LessThan, tokenize::TokenType::GreaterThan,
                tokenize::TokenType::LessThanEqual,
                tokenize::TokenType::GreaterThanEqual})) {
    auto op = token_to_binary_operator(previous().get_type());
    auto right = parse_type_check_expression();
    expr = ast::ASTFactory::create_binary_expression(op, std::move(expr),
                                                     std::move(right));
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_type_check_expression() {
  auto expr = parse_shift_expression();

  if (match(tokenize::TokenType::Is)) {
    auto type = parse_type_literal();
    // Create a type check binary expression
    // Note: The right operand is a placeholder since type checking
    // requires special handling in semantic analysis
    return ast::ASTFactory::create_binary_expression(
        ast::BinaryExpression::Operator::TYPE_CHECK, std::move(expr),
        std::make_unique<ast::Identifier>("type_check_placeholder"));
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_shift_expression() {
  auto expr = parse_additive_expression();

  while (match({tokenize::TokenType::BitwiseShiftLeft,
                tokenize::TokenType::BitwiseShiftRight})) {
    auto op = token_to_binary_operator(previous().get_type());
    auto right = parse_additive_expression();
    expr = ast::ASTFactory::create_binary_expression(op, std::move(expr),
                                                     std::move(right));
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_range_expression() {
  auto expr = parse_multiplicative_expression();

  if (match(tokenize::TokenType::Range)) {
    // Check for unbounded range (expr..)
    if (check(tokenize::TokenType::Comma) ||
        check(tokenize::TokenType::RightParen) ||
        check(tokenize::TokenType::RightBracket) ||
        check(tokenize::TokenType::RightBrace) ||
        check(tokenize::TokenType::Semicolon) ||
        check(tokenize::TokenType::Arrow) || is_at_end()) {
      // Unbounded range - create binary expression with null right operand
      expr = ast::ASTFactory::create_binary_expression(
          ast::BinaryExpression::Operator::RANGE, std::move(expr), nullptr);
    } else {
      // Bounded range - parse the right side
      auto right = parse_multiplicative_expression();
      expr = ast::ASTFactory::create_binary_expression(
          ast::BinaryExpression::Operator::RANGE, std::move(expr),
          std::move(right));
    }
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_additive_expression() {
  auto expr = parse_range_expression();

  while (match({tokenize::TokenType::Plus, tokenize::TokenType::Minus})) {
    auto op = (previous().get_type() == tokenize::TokenType::Plus)
                  ? ast::BinaryExpression::Operator::ADD
                  : ast::BinaryExpression::Operator::SUBTRACT;
    auto right = parse_range_expression();
    expr = ast::ASTFactory::create_binary_expression(op, std::move(expr),
                                                     std::move(right));
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_multiplicative_expression() {
  auto expr = parse_unary_expression();

  while (match({tokenize::TokenType::Asterisk, tokenize::TokenType::Slash,
                tokenize::TokenType::Percent})) {
    auto op = token_to_binary_operator(previous().get_type());
    auto right = parse_unary_expression();
    expr = ast::ASTFactory::create_binary_expression(op, std::move(expr),
                                                     std::move(right));
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_unary_expression() {
  if (is_unary_operator(current().get_type())) {
    auto op = token_to_unary_operator(current().get_type());
    advance();
    auto operand = parse_unary_expression();
    return ast::ASTFactory::create_unary_expression(op, std::move(operand));
  }

  return parse_postfix_expression();
}

std::unique_ptr<ast::Expression> Parser::parse_postfix_expression() {
  auto expr = parse_primary_expression();

  while (true) {
    if (match(tokenize::TokenType::Increment)) {
      expr = ast::ASTFactory::create_postfix_expression(
          ast::PostfixExpression::OperatorType::POST_INCREMENT,
          std::move(expr));
    } else if (match(tokenize::TokenType::Decrement)) {
      expr = ast::ASTFactory::create_postfix_expression(
          ast::PostfixExpression::OperatorType::POST_DECREMENT,
          std::move(expr));
    } else if (match(tokenize::TokenType::NullAssertion)) {
      // Handle null assertion operator !!
      // For now, treat as a special postfix operator
      expr = ast::ASTFactory::create_postfix_expression(
          ast::PostfixExpression::OperatorType::POST_INCREMENT, // Placeholder
          std::move(expr));
    } else if (match(tokenize::TokenType::Dot)) {
      std::string member = parse_identifier();
      // Using PostfixExpression for member access
      auto postfix = ast::ASTFactory::create_postfix_expression(
          ast::PostfixExpression::OperatorType::MEMBER_ACCESS, std::move(expr));
      postfix->set_member_name(member);
      expr = std::move(postfix);
    } else if (match(tokenize::TokenType::NullSafeAccess)) {
      std::string member = parse_identifier();
      // Using PostfixExpression for null-safe member access
      auto postfix = ast::ASTFactory::create_postfix_expression(
          ast::PostfixExpression::OperatorType::SAFE_MEMBER_ACCESS,
          std::move(expr));
      postfix->set_member_name(member);
      expr = std::move(postfix);
    } else if (match(tokenize::TokenType::LeftBracket)) {
      auto index = parse_expression();
      consume(tokenize::TokenType::RightBracket,
              "Expected ']' after array index");
      // Using PostfixExpression for array access
      auto postfix = ast::ASTFactory::create_postfix_expression(
          ast::PostfixExpression::OperatorType::ARRAY_ACCESS, std::move(expr));
      postfix->set_index_expression(std::move(index));
      expr = std::move(postfix);
    } else if (match(tokenize::TokenType::LeftParen)) {
      auto args = parse_argument_list();
      consume(tokenize::TokenType::RightParen, "Expected ')' after arguments");
      // Using PostfixExpression for function call
      auto postfix = ast::ASTFactory::create_postfix_expression(
          ast::PostfixExpression::OperatorType::FUNCTION_CALL, std::move(expr));
      postfix->set_arguments(std::move(args));
      expr = std::move(postfix);
    } else if (match(tokenize::TokenType::As)) {
      // Check for safe cast (as?)
      bool is_safe_cast = match(tokenize::TokenType::Question);
      auto type = parse_type_literal();
      auto postfix = ast::ASTFactory::create_postfix_expression(
          ast::PostfixExpression::OperatorType::CAST, std::move(expr));
      postfix->set_cast_type(std::move(type));
      postfix->set_safe_cast(is_safe_cast);
      expr = std::move(postfix);
    } else {
      break;
    }
  }

  return expr;
}

std::unique_ptr<ast::Expression> Parser::parse_primary_expression() {
  if (check(tokenize::TokenType::Identifier)) {
    // Check if this is a labeled expression: identifier @ expression
    size_t saved_pos = m_current_position;
    std::string name = parse_identifier();

    if (match(tokenize::TokenType::At)) {
      // This is a labeled expression: name @ expression
      auto expr = parse_primary_expression(); // Parse the expression after @
      // For now, just return the expression (labels would need special AST
      // support)
      return expr;
    } else {
      // Restore position and parse as regular identifier
      m_current_position = saved_pos;
      std::string identifier_name = parse_identifier();
      return ast::ASTFactory::create_identifier(identifier_name);
    }
  }

  if (check(tokenize::TokenType::Number)) {
    return parse_number_literal();
  }

  if (check(tokenize::TokenType::String)) {
    return parse_string_literal();
  }

  if (check(tokenize::TokenType::Character)) {
    // For now, treat character literals as string literals until AST is updated
    auto token = consume(tokenize::TokenType::Character, "Expected character");
    std::string value = token.get_literal().to_string();
    return ast::ASTFactory::create_string_literal(value);
  }

  if (check(tokenize::TokenType::True) || check(tokenize::TokenType::False)) {
    return parse_boolean_literal();
  }

  if (match(tokenize::TokenType::Null)) {
    return ast::ASTFactory::create_null_literal();
  }

  if (match(tokenize::TokenType::None)) {
    // For now, treat None as null until AST is updated
    return ast::ASTFactory::create_null_literal();
  }

  if (match(tokenize::TokenType::LeftParen)) {
    // Check if this is a lambda expression by looking ahead
    size_t saved_pos = m_current_position;
    bool is_lambda = false;
